ghc-4335c07/testsuite/tests/typecheck/should_compile/Tc271a.hs
module Tc271a where
import {-# SOURCE #-} Tc271

h2 :: K a => a -> a
h2 = h
