ghc-4335c07/testsuite/tests/typecheck/should_fail/T12035a.hs
module T12035a where
import {-# SOURCE #-} T12035
f :: T -> T
f x = x
